[package]
name = "temporal-json"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
anyhow = {version = "1.0", features = ["backtrace"]}

# Serialization
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# Enum Utils
strum = {version = "0.24", features = ["derive"]}